Fix STT clipping on low resolutions

--- a/index.css
+++ b/index.css
@@ -60,13 +60,11 @@ nav a:visited {
 
 #STT {
     position: absolute;
-    top: 50%;
-    left: 15%;
-    transform: translate(-50%, -50%);
+    top: 45%;
+    left: 10%;
     z-index: 2;
     color: white; /* Change the text color as needed */
     text-align: center;
-    background-color: none;
 }
 
 #STT h1 {
